unpackaged/main/default/objects/adroll__AdRollSegment__c/adroll__AdRollSegment__c.object-meta.xml
<CustomObject>
    <description>This object stores a record for each Segment that will be synchronized with the AdRoll API</description>
    <label>RollWorks Segment</label>
    <nameField>
        <displayFormat>ARS-{000000}</displayFormat>
        <label>RollWorks Segment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RollWorks Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>