unpackaged/main/default/objects/adroll__AdRollSegment__c/fields/adroll__Active__c.field-meta.xml
<CustomField>
    <fullName>adroll__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If Checked the Segment Should be sent to the RollWorks API</description>
    <inlineHelpText>If Checked the Segment Should be sent to the RollWorks API</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>