unpackaged/main/default/objects/adroll__AdRollSegment__c/fields/adroll__Company_List__c.field-meta.xml
<CustomField>
    <fullName>adroll__Company_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company List</label>
    <type>Checkbox</type>
</CustomField>