unpackaged/main/default/objects/adroll__AdRollSegment__c/fields/adroll__Company_List_Accounts_Total__c.field-meta.xml
<CustomField>
    <fullName>adroll__Company_List_Accounts_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Company List Accounts Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>