unpackaged/main/default/objects/adroll__AdRollSegment__c/fields/adroll__Contains_Joined_Segments__c.field-meta.xml
<CustomField>
    <fullName>adroll__Contains_Joined_Segments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contains Joined Segments</label>
    <type>Checkbox</type>
</CustomField>