unpackaged/main/default/objects/adroll__AdRollSegment__c/fields/adroll__Delete_Segment__c.field-meta.xml
<CustomField>
    <fullName>adroll__Delete_Segment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to mark segments with a big amount of members for deletion using a batch job</description>
    <label>Delete Segment</label>
    <type>Checkbox</type>
</CustomField>