unpackaged/main/default/objects/adroll__AdRollSegment__c/fields/adroll__Description__c.field-meta.xml
<CustomField>
    <fullName>adroll__Description__c</fullName>
    <description>Description of the RollWorks segment</description>
    <inlineHelpText>Description of the RollWorks segment</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>