unpackaged/main/default/objects/adroll__AdRollSegment__c/fields/adroll__Segment_Member_Failed_Records__c.field-meta.xml
<CustomField>
    <fullName>adroll__Segment_Member_Failed_Records__c</fullName>
    <description>Difference between Segment Members Total Found and Total Synced.</description>
    <formula>adroll__Segment_Members_Total_Found__c - adroll__Segment_Members_Total_Synced__c</formula>
    <label>Segment Member Failed Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>