unpackaged/main/default/objects/adroll__AdRollSegment__c/fields/adroll__SegmentMemberCreatedCount__c.field-meta.xml
<CustomField>
    <fullName>adroll__SegmentMemberCreatedCount__c</fullName>
    <label>Segment Member Created Count(Deprecated)</label>
    <summaryForeignKey>adroll__AdRollSegmentMember__c.adroll__AdRollSegment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>