unpackaged/main/default/objects/adroll__AdRollSegment__c/fields/adroll__SegmentMemberFailureCount__c.field-meta.xml
<CustomField>
    <fullName>adroll__SegmentMemberFailureCount__c</fullName>
    <description>Segement Member Count For Failed Records</description>
    <inlineHelpText>Segement Member Count For Failed Records</inlineHelpText>
    <label>Segment Member Failure Count(Deprecated)</label>
    <summarizedField>adroll__AdRollSegmentObject__c.adroll__Segment_Member_Failure_Count__c</summarizedField>
    <summaryForeignKey>adroll__AdRollSegmentObject__c.adroll__AdRollSegment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>