unpackaged/main/default/objects/adroll__AdRollSegment__c/fields/adroll__SegmentMemberSuccessCount__c.field-meta.xml
<CustomField>
    <fullName>adroll__SegmentMemberSuccessCount__c</fullName>
    <description>Total No Of Segment Record Successfully Created by the RollWorks Segment Member Job</description>
    <inlineHelpText>Total No Of Segment Record Successfully Created by the RollWorks Segment Member Job</inlineHelpText>
    <label>Segment Member Success Count(Deprecated)</label>
    <summarizedField>adroll__AdRollSegmentObject__c.adroll__Segment_Member_Success_Count__c</summarizedField>
    <summaryForeignKey>adroll__AdRollSegmentObject__c.adroll__AdRollSegment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>