unpackaged/main/default/objects/adroll__AdRollSegment__c/fields/adroll__SegmentName__c.field-meta.xml
<CustomField>
    <fullName>adroll__SegmentName__c</fullName>
    <description>Name of the RollWorks segment</description>
    <inlineHelpText>Name of the RollWorks segment</inlineHelpText>
    <label>Segment Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>