unpackaged/main/default/objects/adroll__AdRollSegment__c/fields/adroll__Status__c.field-meta.xml
<CustomField>
    <fullName>adroll__Status__c</fullName>
    <description>Status field for RollWorks Segment, defined under following rules:
            1. If the segment has failed segment member count, display &quot;Error&quot;.
            2. If the segment member count is 0, display &quot;Created&quot;
            3. If the segment member count is greater than 0 and less than 100, display &quot;Audience Too Small&quot;
            4. If the segment member count is greater than 100, display &quot;Success&quot;
            For company list, compare against &quot;Company_List_Accounts_Total__c&quot;, else compare against &quot;TotalCountOfSegmentRecordToProcess__c&quot; and &quot;SegmentMemberFailureCount__c&quot;</description>
    <formula>IF(adroll__Company_List__c,
                IF(adroll__Company_List_Accounts_Total__c==0,
                    &#39;Created&#39;,
                    IF((adroll__Company_List_Accounts_Total__c&gt;0 &amp;&amp; adroll__Company_List_Accounts_Total__c&lt;100),
                        &#39;Audience Too Small&#39;,
                        &#39;Success&#39;
                    )
                ),
                IF(adroll__NoOfFailedJobs__c&gt;0,
                    &#39;Failed&#39;,
                    IF((adroll__Segment_Members_Total_Found__c - adroll__Segment_Members_Total_Synced__c)&gt;0,
                        &#39;Error&#39;,
                        IF(adroll__TotalCountOfSegmentRecordToProcess__c==0,
                            &#39;Created&#39;,
                            IF((adroll__TotalCountOfSegmentRecordToProcess__c&gt;0 &amp;&amp; adroll__TotalCountOfSegmentRecordToProcess__c&lt;100),
                                &#39;Audience Too Small&#39;,
                                &#39;Success&#39;
                            )
                        )
                    )
                )
            )</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>