unpackaged/main/default/objects/adroll__AdRollSegment__c/fields/adroll__TotalCountOfSegmentRecordToProcess__c.field-meta.xml
<CustomField>
    <fullName>adroll__TotalCountOfSegmentRecordToProcess__c</fullName>
    <description>This field stores the total no of Segment Records that needs to be processed by Segment Member Batch Process</description>
    <inlineHelpText>This field stores the total no of Segment Records that needs to be processed by Segment Member Batch Process</inlineHelpText>
    <label>Total Count Of Segment Record To Process</label>
    <summarizedField>adroll__AdRollSegmentObject__c.adroll__Segment_Member_Count__c</summarizedField>
    <summaryForeignKey>adroll__AdRollSegmentObject__c.adroll__AdRollSegment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>